# wurst

./: .gitignore  .travis.yml  CHANGES.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  README.rst  TODO  old_setup.py  pyproject.toml  requirements-rtd.txt  setup.py
.github/workflows/: python-package-deploy.yml  python-test.yml
dev/: Update Wurst with new ecoinvent filters.ipynb
docs/: Makefile  conf.py  data_format.rst  index.rst  introduction.rst  marginals.rst  technical.rst
docs/notebooks/: marginal-mixes.ipynb
docs/notebooks/data/: consequential-mixes.xlsx
src/wurst/: __init__.py  filesystem.py  geo.py  linking.py  logging_config.py  searching.py
src/wurst/IMAGE/: __init__.py  calc_utils.py  electricity.py  io.py
src/wurst/IMAGE/metadata/: region-topology.json
src/wurst/REMIND/: __init__.py  calc_utils.py  electricity.py
src/wurst/REMIND/metadata/: __init__.py
src/wurst/brightway/: __init__.py  extract_database.py  write_database.py
src/wurst/brightway25/: __init__.py
src/wurst/ecoinvent/: electricity_markets.py  filters.py
src/wurst/transformations/: __init__.py  activity.py  cleaning.py  geo.py  uncertainty.py  utils.py
src/wurst/transformations/markets/: markets.py  utils.py
tests/: brightway25_io.py  brightway_fixtures.py  brightway_io.py  cleaning.py  fixtures.py  geo.py  searching.py  test_link_internal_products_processes.py  transform_activity.py  uncertainty.py
tests/ecoinvent/: electricity_markets.py  filters.py
tests/transformations/: geo_other.py  geo_relinking.py  t_geo.py
wurst/: __init__.py  errors.py  filesystem.py  geo.py  linking.py  searching.py  version.py
wurst/IMAGE/: __init__.py  calc_utils.py  electricity.py  io.py  metadata.py
wurst/IMAGE/metadata/: location-mapping.json  region-topolgy.json  regions.json
wurst/REMIND/: __init__.py  io.py
wurst/REMIND/metadata/: region-topolgy.json  region-topology.json
wurst/brightway/: __init__.py  extract_database.py  write_database.py
wurst/brightway25/: __init__.py
wurst/ecoinvent/: __init__.py  electricity_markets.py  filters.py
wurst/ecoinvent/metadata/: faces.json
wurst/transformations/: __init__.py  activity.py  cleaning.py  geo.py  uncertainty.py  utils.py
wurst/transformations/markets/: markets.py  utils.py
